--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/style.css">
     <title>Document</title>
 </head>
-
-<main></main>
+<body>
+    <main></main>
     <section id= “container”> 
 
 </section>
@@ -40,4 +41,6 @@
      <footer>
         <p>Projeto desenvolvido pela Alura, sem fins lucrativos.</p>
     </footer>
-    
+
+</body>
+</html>
