--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
     <head>
       <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="assets/style.css">
         <title>Flashcard</title>
 </head>
 <body>
-    <main></main>
+    <main>
     <section id= “container”> 
     
-    </section>
+        <article class="cartao">
+            <div class="cartao__conteudo">
+             <h3> programação</h3>
 
-<h3> programação</h3>
-
-    <article class="cartao">
-        <div class="cartao__conteudo__pergunta">
-            O que é Java Script?
+    <p> <div class="cartao__conteudo__pergunta">
+            O que é Java Script? </p>
             </div>
     </article>
 
@@ -34,8 +34,20 @@
                                 O CSS é uma linguagem de estilização.
                              </div>
                             </div>
-                                
-             </article>
+            </article>
+            <article class="cartao">
+                <div class="cartao__conteudo">
+                    <h3>Programação</h3>
+                    <div class="cartao__conteudo__pergunta">
+                        <p>O que é CSS?</p>
+                    </div>
+                    <div class="cartao__conteudo__resposta">
+                    <p>O CSS é uma linguagem de estilização</p>
+                    </div>
+                </div>
+            </article>
+        </section>
+    </main>
 
     <footer>
         <p>Projeto desenvolvido pela Alura, sem fins lucrativos.</p>
